Client-side error reporting for web server and accordion Bugfix. Also, some graphical cleanup on the web pages.
Bugfix: first level of accordion wouldn't make Ajax requests on click, was
previously hidden by placement of summary section.  Was an error in checking
ID (0 == False).

--- a/gilamon/static/css/gilamon.css
+++ b/gilamon/static/css/gilamon.css
@@ -20,6 +20,13 @@ body {
     //TODO
 }
 
+.summary {
+    padding-left: 2em;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
+    margin-top: 2em;
+}
+
 .header {
     padding-left: 2em;
 }
@@ -27,6 +34,7 @@ body {
 .tool-tipped:hover {
     width: 40%;
     background-color: Silver;
+    cursor: pointer;
 }
 
 .status-icon {
